src/objects/TerritoryTeamMember__c.object
<CustomObject>
    <description>SHAPE - Contains logical many-to-many mapping between Owner (Agent/User) and Territory
. 1 agent can own multiple territories
. A territory cannot map to multiple AM role, but can map to other roles</description>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Additional CAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS Order Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS Order Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat/Hotline Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iSales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager Channel Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Sales Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Development Rep (ROW Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Engineer Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebEx Account Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TerritoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Territory table</description>
        <label>Territory ID</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Territory Teams</relationshipLabel>
        <relationshipName>Territory_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to User object</description>
        <label>User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Territory Team</label>
    <nameField>
        <displayFormat>TO{0000}</displayFormat>
        <label>Territory Team Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Territory_Team_Role</fullName>
        <active>true</active>
        <description>Require Role to have value on Save event</description>
        <errorConditionFormula>ISPICKVAL(Role__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Territory_Team_User</fullName>
        <active>true</active>
        <description>Require User ID to be selected</description>
        <errorConditionFormula>OR(ISNULL( UserId__c), ISBLANK(UserId__c))</errorConditionFormula>
        <errorDisplayField>UserId__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Territory_Team_territoryName</fullName>
        <active>true</active>
        <description>Make Territory Name a required field</description>
        <errorConditionFormula>OR(ISNULL( TerritoryId__c), ISBLANK(TerritoryId__c))</errorConditionFormula>
        <errorDisplayField>TerritoryId__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>